新增一些接口和小改动，但现在解析token会爆错，难顶
